-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9, 10, 11, 12, 13, 14
-
Component/s: hotspot
-
b04
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246826 | 13.0.4 | Tobias Hartmann | P4 | Resolved | Fixed | b05 |
| JDK-8243364 | 11.0.8-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
| JDK-8245017 | 11.0.8 | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
In http://hg.openjdk.java.net/jdk/jdk/file/8e0ae3830fca/src/hotspot/share/opto/type.cpp#l734
We allocate a new type in `xdual()` (line 732) but if the type is self symmetric we just discard it without calling `delete` in line 734.
Of course, it's only a leak in the per-compilation arena but it should still be fixed.
We allocate a new type in `xdual()` (line 732) but if the type is self symmetric we just discard it without calling `delete` in line 734.
Of course, it's only a leak in the per-compilation arena but it should still be fixed.
- backported by
-
JDK-8243364 Memory leak in Type::hashcons
-
- Resolved
-
-
JDK-8245017 Memory leak in Type::hashcons
-
- Resolved
-
-
JDK-8246826 Memory leak in Type::hashcons
-
- Resolved
-