8226879: Memory leak in Type::hashcons

Call delete on xdual type.

Reviewed-by: kvn